<?xml version="1.0"?>
<package format="2">
  <name>smb_emrgency_stop</name>
  <version>0.1.0</version>
  <description>The smb_emrgency_stop package</description>
  <maintainer email="yuflin@student.ethz.ch">ros course student</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>smb_gazebo</exec_depend>
</package>
